[WIP] Update CFM model; still need to develop context modeling

--- a/usage.ipynb
+++ b/usage.ipynb
@@ -45,7 +45,10 @@
    "source": [
     "n = 30000\n",
     "seed_input_list = [\"000abcdefghijkl\", \"100bad!asdfqwer\", \"010asdfbad!qwer\", \"001asdfqwerbad!\"]\n",
-    "program(seed_input_list[1])"
+    "try:\n",
+    "    program(seed_input_list[1])\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -100,7 +103,7 @@
     "    coverage_list = [contcov[1] for contcov in path]\n",
     "    coverage_graph.accept(coverage_list)\n",
     "# contcov_graph.print_graph()\n",
-    "coverage_graph.print_graph()"
+    "# coverage_graph.print_graph()"
    ]
   },
   {
@@ -123,6 +126,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ControlFlowModel import ControlFlowModel\n",
+    "\n",
+    "CFM = ControlFlowModel(record, contcov_graph, coverage_graph)\n",
+    "CFM.identify_branch()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -138,7 +153,11 @@
     "context_map = {}\n",
     "context_map[\"crashme3:13\"] = range(3, 7)\n",
     "context_map[\"crashme3:15\"] = range(7, 11)\n",
-    "context_map[\"crashme3:17\"] = range(11, 15)"
+    "context_map[\"crashme3:17\"] = range(11, 15)\n",
+    "\n",
+    "CFM.set_context_map(context_map)\n",
+    "\n",
+    "# CFM.model_context()"
    ]
   },
   {
@@ -154,25 +173,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ControlFlowModel import ControlFlowModel\n",
-    "\n",
-    "CFM = ControlFlowModel(record, contcov_graph, coverage_graph, context_map=context_map)\n",
-    "CFM.identify_branch()\n",
     "CFM.model_condition()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Previous"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Identify branching point from coverage data\n"
+    "CFM.get_context_map()"
    ]
   },
   {
@@ -181,33 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "from ControlFlowModel import ControlFlowModel\n",
-    "\n",
-    "coverage_graph = CoverageGraph()\n",
-    "for cov, inputs in list(record.items()):\n",
-    "    print(f\"[Coverage]: {cov}, [Input]: {inputs}\")\n",
-    "    coverage_graph.accept(cov)\n",
-    "print(\"\\n[Tree]\")\n",
-    "coverage_graph.print_tree()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Build control flow model\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cfm = ControlFlowModel(cov_graph=coverage_graph, record=record)\n",
-    "cfm.model()\n",
-    "print(cfm)"
+    "CFM.get_edge_cond()"
    ]
   },
   {
