[WIP] Final step remains for context mapping

--- a/usage.ipynb
+++ b/usage.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "import inspect\n",
     "\n",
-    "program = crashme3\n",
+    "program = triangle3\n",
     "print(inspect.getsource(program))"
    ]
   },
@@ -44,7 +44,9 @@
    "outputs": [],
    "source": [
     "n = 30000\n",
-    "seed_input_list = [\"000abcdefghijkl\", \"100bad!asdfqwer\", \"010asdfbad!qwer\", \"001asdfqwerbad!\"]\n",
+    "# seed_input_list = [\"000abcdefghijkl\", \"100bad!asdfqwer\", \"010asdfbad!qwer\", \"001asdfqwerbad!\"]\n",
+    "seed_input_list = [\"good\", \"bad\"]\n",
+    "seed_input_list = [\"00012345good\", \"111123456bad\"]\n",
     "try:\n",
     "    program(seed_input_list[1])\n",
     "except Exception as e:\n",
@@ -71,7 +73,8 @@
     "greybox_recorder = GreyboxFuzzerRecorder(\n",
     "    seed_input_list, Mutator(), PowerSchedule()\n",
     ")\n",
-    "greybox_recorder.runs(FunctionContCovRunner(program), trials=n)\n",
+    "runner = FunctionContCovRunner(program)\n",
+    "greybox_recorder.runs(runner, trials=n)\n",
     "record = greybox_recorder.get_record()\n",
     "\n",
     "print(f\"Unique path: {len(record)}\\n\")\n",
@@ -112,29 +115,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "call_contexts = set()\n",
-    "for path, inputs in record.items():\n",
-    "    for cont_cov in path:\n",
-    "        call_stack, _ = cont_cov\n",
-    "        for call_context in call_stack.split('-'):\n",
-    "            if call_context == '':\n",
-    "                continue\n",
-    "            elif call_context.split(':')[0] in ['run_function', 'coverage']:\n",
-    "                continue\n",
-    "            call_contexts.add(call_context)\n",
-    "print(f\"{call_contexts=}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from ControlFlowModel import ControlFlowModel\n",
     "\n",
-    "CFM = ControlFlowModel(record, contcov_graph, coverage_graph)\n",
-    "CFM.identify_branch()"
+    "CFM = ControlFlowModel(record, contcov_graph, coverage_graph, runner)\n",
+    "CFM.identify_branch()\n",
+    "CFM.identify_call_context()"
    ]
   },
   {
@@ -150,14 +135,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "context_map = {}\n",
-    "context_map[\"crashme3:13\"] = range(3, 7)\n",
-    "context_map[\"crashme3:15\"] = range(7, 11)\n",
-    "context_map[\"crashme3:17\"] = range(11, 15)\n",
+    "# context_map = {}\n",
+    "# context_map[\"crashme3:13\"] = range(3, 7)\n",
+    "# context_map[\"crashme3:15\"] = range(7, 11)\n",
+    "# context_map[\"crashme3:17\"] = range(11, 15)\n",
     "\n",
-    "CFM.set_context_map(context_map)\n",
+    "# CFM.set_context_map(context_map)\n",
     "\n",
-    "# CFM.model_context()"
+    "CFM.model_context()"
    ]
   },
   {
@@ -191,7 +176,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CFM.get_edge_cond()"
+    "for edge, cond in CFM.get_edge_cond().items():\n",
+    "    print(f\"edge={edge} {cond=}\")"
    ]
   },
   {
