--- a/usage.ipynb
+++ b/usage.ipynb
@@ -61,6 +61,7 @@
    ],
    "source": [
     "program, seed_input_list = crashme3_tup\n",
+    "# program, seed_input_list = triangle3_tup\n",
     "print(inspect.getsource(program))\n",
     "try:\n",
     "    program(seed_input_list[1])\n",
@@ -89,13 +90,13 @@
       "Unique path: 17\n",
       "\n",
       "path=(('', ('crashme3', 10)), ('', ('crashme3', 12)), ('', ('crashme3', 14)), ('', ('crashme3', 16)), ('', ('crashme3', 19)), ('', ('__exit__', 83)))\n",
-      "inputs={'000abcdefgi#jkl', '23asdffrd!QSwer', '000abcdefghijkl', '03`dq~w`Er\"ad!a', '000abcduf\\x10ghijl', '>50;pdqI$s$fqwu', '000abJcdefghikl', '000abcdeFghijk,', '00bad\\x01as$fqwe[r', '0\\x110asdfad!ywerh'}\n",
+      "inputs={'000abclefghijkm', '03J=PdKBzZf#erz', '0clPddqeS)|r\"d;', '50;dfLrBBf)urgf', '50?mJdfLBrFaf!r', '5W2?dfLBBaZf!er', '000abdefg>hijkl', '000abcdefghijkl', '00\\x119!sdfqwebad!', '00b.7!d!usdfq}r'}\n",
       "\n",
       "path=(('', ('crashme3', 10)), ('', ('crashme3', 12)), ('', ('crashme3', 13)), ('crashme3:13', ('crashme', 2)), ('crashme3:13', ('crashme', 3)), ('crashme3:13', ('crashme', 4)), ('crashme3:13', ('crashme', 5)), ('crashme3:13', ('crashme', 6)), ('', ('__exit__', 83)))\n",
-      "inputs={'100bad!es6df7er', '100bad!asd2fqer', '100bad!asdfqwer', '100bad!asdqwenr', '100bad!,asdfq7g', '100bad!asdqlwer', '1g0bad!asdfqwer', '100bad!adfUqwer', '10\"bad!a&sfqwer', '100bad!adfqweKr'}\n",
+      "inputs={'100bad!asdfqwer', '1p0bad!acdfqwer', '100bad!asdfqwYr', '100bad!!sdfqWer', '1p0bad!asdfqwe2', '100bad!sdofqwer', '100bad!asdfqgeR', '100bad!asfqwver', '100bad!asdfqUer', '100bad!asd\\x06kqwr'}\n",
       "\n",
       "path=(('', ('crashme3', 10)), ('', ('crashme3', 12)), ('', ('crashme3', 14)), ('', ('crashme3', 15)), ('crashme3:15', ('crashme', 2)), ('crashme3:15', ('crashme', 3)), ('crashme3:15', ('crashme', 4)), ('crashme3:15', ('crashme', 5)), ('crashme3:15', ('crashme', 6)), ('', ('__exit__', 83)))\n",
-      "inputs={'010sdtXbad!qweU', '01Rasdfbad!qwer', '010asdfbad!qwer', '010asdfbad!Qw%r', '010a{dfbad!qwur', '010asdfbad!qwe|', '010idhfbad!qwr=', '01h0sdfbad!qwer', '010asdfbad!=wer', '011asdFbad!quep'}\n",
+      "inputs={'01pasdbbad!qwer', '0100adfbad!qwer', '010asdfbad!qLwr', '010i{dfbad!qwer', '010ardfbad!qwer', '01 asdfbad!qw%r', '010asdfbad!qwer', '01\\x10asdfbad!qeNr', ' 14asdfbad!qwer', '010asddbad!q7*r'}\n",
       "\n"
      ]
     }
@@ -154,7 +155,7 @@
      "output_type": "stream",
      "text": [
       "branches: [<('crashme3', 10)>, <('crashme3', 12)>, <('crashme3', 14)>, <('crashme3', 16)>, <('crashme', 2)>, <('crashme', 3)>, <('crashme', 4)>, <('crashme', 5)>]\n",
-      "call contexts: {'crashme3:17', 'crashme3:15', 'crashme3:13'}\n"
+      "call contexts: {'crashme3:13', 'crashme3:15', 'crashme3:17'}\n"
      ]
     }
    ],
@@ -186,7 +187,7 @@
       "Version: 2.10.3 \n",
       "Build Date: Dec 15 2019 \n",
       "\n",
-      "command line - /Users/bohrok/.pyenv/versions/3.9.7/envs/fuzzingbook/lib/python3.9/site-packages/pulp/apis/../solverdir/cbc/osx/64/cbc /var/folders/t1/6ty9rj2159ggbpcnm4zqcgs00000gn/T/9ab62733d3bd462b9d1c5ef6416a44ee-pulp.mps timeMode elapsed branch printingOptions all solution /var/folders/t1/6ty9rj2159ggbpcnm4zqcgs00000gn/T/9ab62733d3bd462b9d1c5ef6416a44ee-pulp.sol (default strategy 1)\n",
+      "command line - /Users/bohrok/.pyenv/versions/3.10.6/lib/python3.10/site-packages/pulp/solverdir/cbc/osx/64/cbc /var/folders/v9/wc5dh1fd691947y71hyt_2280000gn/T/55397706b59244bfba9e80e248375506-pulp.mps timeMode elapsed branch printingOptions all solution /var/folders/v9/wc5dh1fd691947y71hyt_2280000gn/T/55397706b59244bfba9e80e248375506-pulp.sol (default strategy 1)\n",
       "At line 2 NAME          MODEL\n",
       "At line 3 ROWS\n",
       "At line 17 COLUMNS\n",
@@ -204,22 +205,22 @@
       "Option for printingOptions changed from normal to all\n",
       "Total time (CPU seconds):       0.00   (Wallclock seconds):       0.01\n",
       "\n",
-      "[context_map] k='crashme3:13' v=range(3, 7)\n",
       "[context_map] k='crashme3:17' v=range(11, 15)\n",
-      "[context_map] k='crashme3:15' v=range(7, 11)\n"
+      "[context_map] k='crashme3:15' v=range(7, 11)\n",
+      "[context_map] k='crashme3:13' v=range(3, 7)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/bohrok/.pyenv/versions/3.9.7/envs/fuzzingbook/lib/python3.9/site-packages/pulp/pulp.py:1313: UserWarning: Spaces are not permitted in the name. Converted to '_'\n",
+      "/Users/bohrok/.pyenv/versions/3.10.6/lib/python3.10/site-packages/pulp/pulp.py:1352: UserWarning: Spaces are not permitted in the name. Converted to '_'\n",
       "  warnings.warn(\"Spaces are not permitted in the name. Converted to '_'\")\n"
      ]
     }
    ],
    "source": [
-    "CFM.model_context(mut_trial=10)"
+    "CFM.model_context(mut_trial=100)"
    ]
   },
   {
@@ -238,27 +239,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Modeling <('crashme3', 10)> -> <('crashme3', 12)>... formula: <lambda x: '\u0015' <= x[14] <= '󥼥'> (conf: 0.9058823529411765, trial: (10 / 10))\n",
-      "Modeling <('crashme3', 10)> -> <('crashme3', 11)>... formula: <lambda: x x[1] < '\u0004' or x[1] > '񱮋'> (conf: 0.8823529411764706, trial: (10 / 10))\n",
-      "Modeling <('crashme3', 12)> -> <('crashme3', 14)>... formula: <lambda x: x[6] >= 'f'> (conf: 0.5375, trial: (10 / 10))\n",
-      "Modeling <('crashme3', 12)> -> <('crashme3', 13)>... formula: <lambda x: 'p' <= x[14] <= '󈼔'> (conf: 0.675, trial: (10 / 10))\n",
-      "Modeling <('crashme3', 14)> -> <('crashme3', 16)>... formula: <lambda x: x[9] > 'd'> (conf: 0.5818181818181818, trial: (10 / 10))\n",
-      "Modeling <('crashme3', 14)> -> <('crashme3', 15)>... formula: <lambda x: x[2] < '1'> (conf: 0.7090909090909091, trial: (10 / 10))\n",
-      "Modeling <('crashme3', 16)> -> <('crashme3', 19)>... formula: <lambda x: x[2] > x[11]> (conf: 0.7333333333333333, trial: (10 / 10))\n",
-      "Modeling <('crashme3', 16)> -> <('crashme3', 17)>... formula: <lambda x: '\u0001' <= x[12] <= '󷣦'> (conf: 0.6666666666666666, trial: (10 / 10))\n",
-      "Modeling <('crashme', 2)> -> <('crashme', 3)>... formula: <lambda x: x[1] != 'b'> (conf: 0.6491228070175439, trial: (10 / 10))\n",
+      "Modeling <('crashme3', 10)> -> <('crashme3', 12)>... formula: <lambda x: x[14] != 'k'> (conf: 0.9529411764705882, trial: (1000 / 1000))\n",
+      "Modeling <('crashme3', 10)> -> <('crashme3', 11)>... formula: <lambda x: 'B' <= x[15] <= '􎯶'> (conf: 0.9411764705882353, trial: (1000 / 1000))\n",
+      "Modeling <('crashme3', 12)> -> <('crashme3', 14)>... formula: <lambda x: x[0] != '1'> (conf: 1.0, trial: (23 / 1000))\n",
+      "Modeling <('crashme3', 12)> -> <('crashme3', 13)>... formula: <lambda x: x[0] == '1'> (conf: 1.0, trial: (392 / 1000))\n",
+      "Modeling <('crashme3', 14)> -> <('crashme3', 16)>... formula: <lambda x: x[1] != '1'> (conf: 1.0, trial: (119 / 1000))\n",
+      "Modeling <('crashme3', 14)> -> <('crashme3', 15)>... formula: <lambda x: x[1] == '1'> (conf: 1.0, trial: (296 / 1000))\n",
+      "Modeling <('crashme3', 16)> -> <('crashme3', 19)>... formula: <lambda x: x[2] != '1'> (conf: 1.0, trial: (220 / 1000))\n",
+      "Modeling <('crashme3', 16)> -> <('crashme3', 17)>... formula: <lambda x: x[2] == '1'> (conf: 1.0, trial: (764 / 1000))\n",
+      "Modeling <('crashme', 2)> -> <('crashme', 3)>... formula: <lambda x: x[0] == 'b'> (conf: 1.0, trial: (144 / 1000))\n",
       "Modeling <('crashme', 2)> -> <('__exit__', 83)>... No accepts or rejects; skip.\n",
-      "Modeling <('crashme', 3)> -> <('crashme', 4)>... formula: <lambda x: x[0] >= 'b'> (conf: 0.43529411764705883, trial: (10 / 10))\n",
+      "Modeling <('crashme', 3)> -> <('crashme', 4)>... formula: <lambda x: x[1] == 'a'> (conf: 1.0, trial: (106 / 1000))\n",
       "Modeling <('crashme', 3)> -> <('__exit__', 83)>... No accepts or rejects; skip.\n",
-      "Modeling <('crashme', 4)> -> <('crashme', 5)>... formula: <lambda x: x[2] == 'd'> (conf: 1.0, trial: (4 / 10))\n",
+      "Modeling <('crashme', 4)> -> <('crashme', 5)>... formula: <lambda x: x[2] == 'd'> (conf: 1.0, trial: (28 / 1000))\n",
       "Modeling <('crashme', 4)> -> <('__exit__', 83)>... No accepts or rejects; skip.\n",
-      "Modeling <('crashme', 5)> -> <('crashme', 6)>... formula: <lambda x: '-' <= x[4] <= '󅫤'> (conf: 0.2, trial: (10 / 10))\n",
+      "Modeling <('crashme', 5)> -> <('crashme', 6)>... formula: <lambda x: x[3] == '!'> (conf: 1.0, trial: (7 / 1000))\n",
       "Modeling <('crashme', 5)> -> <('__exit__', 83)>... No accepts or rejects; skip.\n"
      ]
     }
    ],
    "source": [
-    "CFM.model_condition(max_trial=10)"
+    "CFM.model_condition(max_trial=1000)"
    ]
   },
   {
@@ -269,9 +270,9 @@
     {
      "data": {
       "text/plain": [
-       "{'crashme3:13': range(3, 7),\n",
-       " 'crashme3:17': range(11, 15),\n",
-       " 'crashme3:15': range(7, 11)}"
+       "{'crashme3:17': range(11, 15),\n",
+       " 'crashme3:15': range(7, 11),\n",
+       " 'crashme3:13': range(3, 7)}"
       ]
      },
      "execution_count": 8,
@@ -292,21 +293,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "edge=E<('crashme3', 10) -> ('crashme3', 12)> cond=(\"lambda x: '\\x15' <= x[14] <= '\\U000e5f25'\", 0.9058823529411765)\n",
-      "edge=E<('crashme3', 10) -> ('crashme3', 11)> cond=(\"lambda: x x[1] < '\\x04' or x[1] > '\\U00071b8b'\", 0.8823529411764706)\n",
-      "edge=E<('crashme3', 12) -> ('crashme3', 14)> cond=(\"lambda x: x[6] >= 'f'\", 0.5375)\n",
-      "edge=E<('crashme3', 12) -> ('crashme3', 13)> cond=(\"lambda x: 'p' <= x[14] <= '\\U000c8f14'\", 0.675)\n",
-      "edge=E<('crashme3', 14) -> ('crashme3', 16)> cond=(\"lambda x: x[9] > 'd'\", 0.5818181818181818)\n",
-      "edge=E<('crashme3', 14) -> ('crashme3', 15)> cond=(\"lambda x: x[2] < '1'\", 0.7090909090909091)\n",
-      "edge=E<('crashme3', 16) -> ('crashme3', 19)> cond=('lambda x: x[2] > x[11]', 0.7333333333333333)\n",
-      "edge=E<('crashme3', 16) -> ('crashme3', 17)> cond=(\"lambda x: '\\x01' <= x[12] <= '\\U000f78e6'\", 0.6666666666666666)\n",
-      "edge=E<('crashme', 2) -> ('crashme', 3)> cond=(\"lambda x: x[1] != 'b'\", 0.6491228070175439)\n",
+      "edge=E<('crashme3', 10) -> ('crashme3', 12)> cond=(\"lambda x: x[14] != 'k'\", 0.9529411764705882)\n",
+      "edge=E<('crashme3', 10) -> ('crashme3', 11)> cond=(\"lambda x: 'B' <= x[15] <= '\\U0010ebf6'\", 0.9411764705882353)\n",
+      "edge=E<('crashme3', 12) -> ('crashme3', 14)> cond=(\"lambda x: x[0] != '1'\", 1.0)\n",
+      "edge=E<('crashme3', 12) -> ('crashme3', 13)> cond=(\"lambda x: x[0] == '1'\", 1.0)\n",
+      "edge=E<('crashme3', 14) -> ('crashme3', 16)> cond=(\"lambda x: x[1] != '1'\", 1.0)\n",
+      "edge=E<('crashme3', 14) -> ('crashme3', 15)> cond=(\"lambda x: x[1] == '1'\", 1.0)\n",
+      "edge=E<('crashme3', 16) -> ('crashme3', 19)> cond=(\"lambda x: x[2] != '1'\", 1.0)\n",
+      "edge=E<('crashme3', 16) -> ('crashme3', 17)> cond=(\"lambda x: x[2] == '1'\", 1.0)\n",
+      "edge=E<('crashme', 2) -> ('crashme', 3)> cond=(\"lambda x: x[0] == 'b'\", 1.0)\n",
       "edge=E<('crashme', 2) -> ('__exit__', 83)> cond=(None, None)\n",
-      "edge=E<('crashme', 3) -> ('crashme', 4)> cond=(\"lambda x: x[0] >= 'b'\", 0.43529411764705883)\n",
+      "edge=E<('crashme', 3) -> ('crashme', 4)> cond=(\"lambda x: x[1] == 'a'\", 1.0)\n",
       "edge=E<('crashme', 3) -> ('__exit__', 83)> cond=(None, None)\n",
       "edge=E<('crashme', 4) -> ('crashme', 5)> cond=(\"lambda x: x[2] == 'd'\", 1.0)\n",
       "edge=E<('crashme', 4) -> ('__exit__', 83)> cond=(None, None)\n",
-      "edge=E<('crashme', 5) -> ('crashme', 6)> cond=(\"lambda x: '-' <= x[4] <= '\\U000c5ae4'\", 0.2)\n",
+      "edge=E<('crashme', 5) -> ('crashme', 6)> cond=(\"lambda x: x[3] == '!'\", 1.0)\n",
       "edge=E<('crashme', 5) -> ('__exit__', 83)> cond=(None, None)\n"
      ]
     }
@@ -325,11 +326,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "deff4902f075b32772b654ad9837b62ee8d03080ac9d26d4b178c85d1c0ff37c"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('fuzzingbook': pyenv)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -343,9 +341,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "fcaa8b76edf8b69a929f1ef03043673df5d7a7404e1bce8ba4d2285263fa1a54"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
